Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
12.3, 10.11.14, 11.4.6, 11.8.2
-
Rocky Linux release 9.6 (Blue Onyx)
-
Can result in unexpected behaviour
-
On 64-bit systems other than IBM AIX, the minimum and default values of innodb_buffer_pool_size_max were changed to 8 MiB and 8 TiB, respectively.
-
Q1/2026 Server Development
Description
Linux Version: Rocky Linux release 9.6 (Blue Onyx)
Mariadb Version: mysql Ver 15.1 Distrib 10.11.14-MariaDB, for linux-systemd (x86_64) using readline 5.1
|
Online change:
MariaDB [(none)]> show global variables like 'innodb_buffer_pool_size';
|
+-------------------------+-------------+
|
| Variable_name | Value |
|
+-------------------------+-------------+
|
| innodb_buffer_pool_size | 92341796864 |
|
+-------------------------+-------------+
|
1 row in set (0.000 sec)
|
|
|
MariaDB [(none)]> set global innodb_buffer_pool_size = 96636764160;
|
Query OK, 0 rows affected, 1 warning (0.000 sec)
|
|
|
MariaDB [(none)]> exit;
|
Bye
|
MariaDB [(none)]> show global variables like 'innodb_buffer_pool_size';
|
+-------------------------+-------------+
|
| Variable_name | Value |
|
+-------------------------+-------------+
|
| innodb_buffer_pool_size | 92341796864 |
|
+-------------------------+-------------+
|
1 row in set (0.000 sec)
|
Attachments
Issue Links
- causes
-
MDEV-38958 Core dump may contain buffer pool in release builds
-
- Closed
-
-
MDEV-39139 InnoDB fails to start up with small RLIMIT_AS
-
- Closed
-
-
MDEV-39142 InnoDB fails to start up with CONFIG_ARM64_VA_BITS_39=y
-
- Closed
-
-
MDEV-40410 InnoDB fails to start under TSan on x86-64
-
- Closed
-
- is caused by
-
MDEV-29445 reorganise innodb buffer pool (and remove buffer pool chunks)
-
- Closed
-
- is duplicated by
-
MDEV-38779 New InnoDB Buffer Pool autosize feature not so optimal implemented
-
- Closed
-
- relates to
-
MDEV-38884 Runtime check for Intel TSX-NI incurs some overhead
-
- Open
-
-
MDEV-40921 Large allocations Use MMAP_NORESERVE (but not large_pages)
-
- Closed
-
-
MDEV-34863 RAM Usage Changed Significantly Between 10.11 Releases
-
- Closed
-
-
MDEV-37557 Issues with new Buffer Pool Implementation in MariaDB Q2 Minors (10.11.12 and 11.4.6)
-
- Open
-