include/my_virtual_mem.h
@@ -24,10 +24,15 @@
 extern "C" {
 #endif
 
-# ifdef _WIN32
+#ifdef _WIN32
 char *my_virtual_mem_reserve(size_t *size);
-# endif
+#endif
+#ifdef __linux__
+char *my_virtual_mem_commit(char *ptr, size_t size, my_bool commit);
+#else
 char *my_virtual_mem_commit(char *ptr, size_t size);
+# define my_virtual_mem_commit(ptr, size, c) my_virtual_mem_commit(ptr, size)
+#endif
 void my_virtual_mem_decommit(char *ptr, size_t size);
 void my_virtual_mem_release(char *ptr, size_t size);
 
