mysys/my_virtual_mem.c
@@ -62,7 +62,7 @@ static my_bool is_memory_committed(char *ptr, size_t size)
 }
 #endif
 
-char *my_virtual_mem_commit(char *ptr, size_t size)
+char *my_virtual_mem_commit(char *ptr, size_t size, my_bool commit)
 {
   DBUG_ASSERT(ptr);
 #ifdef _WIN32
@@ -103,8 +103,8 @@ char *my_virtual_mem_commit(char *ptr, size_t size)
 # else
     void *p= 0;
     const int flags=
-#  ifdef MAP_POPULATE
-      MAP_POPULATE |
+#  ifdef __linux__
+      (commit ? MAP_POPULATE : 0) |
 #  endif
       MAP_PRIVATE | MAP_ANONYMOUS | MAP_FIXED;
     p= mmap(ptr, size, PROT_READ | PROT_WRITE, flags, -1, 0);
@@ -128,9 +128,6 @@ void my_virtual_mem_decommit(char *ptr, size_t size)
 {
 #ifdef _WIN32
   DBUG_ASSERT(is_memory_committed(ptr, size));
-# ifndef HAVE_UNACCESSIBLE_AFTER_MEM_DECOMMIT
-#  error "VirtualFree(MEM_DECOMMIT) will not allow subsequent reads!"
-# endif
   if (!my_use_large_pages)
   {
     if (!VirtualFree(ptr, size, MEM_DECOMMIT))
@@ -141,19 +138,6 @@ void my_virtual_mem_decommit(char *ptr, size_t size)
     }
   }
 #else
-  const int prot=
-# ifndef HAVE_UNACCESSIBLE_AFTER_MEM_DECOMMIT
-    /*
-      In InnoDB, buf_pool_t::page_guess() may deference pointers to
-      this, assuming that either the original contents or zeroed
-      contents is available.
-    */
-    PROT_READ
-# else
-    /* We will explicitly mark the memory unaccessible. */
-    PROT_NONE
-# endif
-    ;
 # ifdef _AIX
   disclaim(ptr, size, DISCLAIM_ZEROMEM);
 # elif defined __linux__ || defined __osf__
@@ -172,7 +156,7 @@ void my_virtual_mem_decommit(char *ptr, size_t size)
 # else
 #  warning "Do not know how to decommit memory"
 # endif
-  if (mprotect(ptr, size, prot))
+  if (mprotect(ptr, size, PROT_NONE))
   {
     my_error(EE_BADMEMORYRELEASE, MYF(ME_ERROR_LOG_ONLY), ptr, size, errno);
     DBUG_ASSERT(0);
